--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .background-image {
-    background-image: url('http://localhost:3000/bmps/home_background.jpg');
+    background-image: url('http://localhost:3000/bmps/background.png');
     width: 100vw;
     height: 100vh;
     background-size: cover;
@@ -9,6 +9,10 @@
     position: fixed;
     top: 0;
     left: 0;
+}
+
+main {
+    background-color: transparent;
 }
 
 .home-text {
