--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .background-image {
-    background-image: url('http://localhost:3000/bmps/background.png');
+    background-image: url('/bmps/background.png');
     width: 100vw;
     height: 100vh;
     background-size: cover;
