--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .background-image {
-    background-image: url('/bmps/background.png');
+    background-image: url("https://condescending-curie-29a045.netlify.app//bmps/background.png");
     width: 100vw;
     height: 100vh;
     background-size: cover;
