--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,14 +1,16 @@
 .background-image {
-    background-image: url("https://condescending-curie-29a045.netlify.app//bmps/background.png");
     width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    background-position: center top;
-    opacity: 0.25;
-    background-repeat: no-repeat;
+    height: auto;
+    opacity: 0;
     position: fixed;
     top: 0;
     left: 0;
+    margin: 0;
+    transition: opacity 1s;
+}
+
+.background-image.on {
+    opacity: 0.25;
 }
 
 main {
