--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -12,3 +12,15 @@
 .results {
     clear: both;
 }
+
+.contact-background-image {
+    width: 100vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    z-index: -1;
+    opacity: 0.25;
+    transition: opacity 1s;
+}
