started with layout

--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,4 +1,4 @@
-.movie-shell {
+/* .movie-shell {
     position: relative;
 }
 
@@ -17,4 +17,4 @@
 .loading-graphic {
     position: relative;
     z-index: 10;
-}
+} */
