--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,6 +1,6 @@
 img {
-    float: right;
-    margin: 20px;
+    /* float: right;
+    margin: 20px; */
 }
 
 .about-div {
@@ -32,7 +32,7 @@ img {
     width: 100%;
     height: 100%;
     text-align: left;
-    color: black;
+    color: white;
 }
 
 @media screen and (min-width: 768px) {
@@ -59,6 +59,8 @@ img {
         z-index: 2;
         padding: 10px;
         background-color: rgba(0, 0, 0, 0.5);
+        padding: 15px;
+        border-radius: 15px;
         text-align: left;
         color: white;
         font-weight: bold;
