--- a/src/components/movies/MovieComponent.css
+++ b/src/components/movies/MovieComponent.css
@@ -30,6 +30,7 @@
 .movie-module img {
     display: block;
     margin: 0 auto;
+    width: 100%;
 }
 
 @media (min-width: 750px) {
@@ -39,5 +40,6 @@
     .movie-module img {
         margin-right: 10px;
         height: auto;
+        width: auto;
     }
 }
