fixed movie layout

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,7 +5,7 @@
 }
 
 .background-image-mobile {
-    background-image: url('https://condescending-curie-29a045.netlify.app//bmps/background.png');
+    background-image: url('https://condescending-curie-29a045.netlify.app/bmps/background.png');
     background-size: cover;
     background-position: center center;
     width: 100vw;
