--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -33,3 +33,16 @@ input[name=checker] {
     opacity: 0.25;
     transition: opacity 1s;
 }
+
+.contact-background-image {
+    background-image: url('https://condescending-curie-29a045.netlify.app/bmps/skateboard.jpeg');
+    background-size: cover;
+    background-position: center center;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.25;
+}
