--- a/src/components/LoadingGraphic.css
+++ b/src/components/LoadingGraphic.css
@@ -8,7 +8,7 @@
         bottom: 0;
         left: 0;
         z-index: 10;
-        font-size: 100px;
+        font-size: 50px;
         color: white;
     }
     
@@ -25,9 +25,9 @@
         width: 20%;
         height: 500px;
         animation-name: growShrink;
-        /* animation-delay: 1s; */
         animation-iteration-count: infinite;
         position: relative;
+        opacity: 0.5;
     }
     
     .loading-background div:first-child {
