--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,38 +1,40 @@
-img {
-    /* float: right;
-    margin: 20px; */
-}
-
 .about-div {
     max-width: 600px;
     width: 80%;
     margin: 100px auto;
     position: relative;
-    background-color: rgba(0, 0, 0, 0.75);
-    /* display: flex; */
     z-index: 2;
+    text-align: left;
 }
 
 .about-div img {
-    position: relative;
+    width: 33.33%;
+    height: auto;
+    float: left;
+    margin-right: 10px;
+    /* position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
     z-index: 1;
     width: 100%;
     height: auto;
     opacity: 0.25;
-    margin: 0;
+    margin: 0; */
 }
 
 .about-div .about-text {
     margin: 0;
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     bottom: 0;
     z-index: 3;
     padding: 10px;
-    width: 100%;
-    height: 100%;
+    margin: 20px auto;
+    width: 80%;
     text-align: left;
     color: white;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 @media screen and (min-width: 768px) {
@@ -46,12 +48,12 @@ img {
         z-index: 2;
     }
     .about-div img {
-        position: absolute;
+        /* position: absolute;
         z-index: 1;
         width: 50%;
         top: 50px;
         right: -50px;
-        opacity: 1;
+        opacity: 1; */
     }
     .about-div .about-text {
         position: relative;
