--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
     text-align: center;
 }
 
+.move-reel {
+    background-image: url("../public/bmps/filmStrip.png");
+    width: 100px;
+    height: 3200px;
+}
+
 .App-logo {
     height: 40vmin;
     pointer-events: none;
