--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,21 @@
     text-align: center;
 }
 
-.move-reel {
-    /* background-image: url("/filmStrip.png");
+.movie-reel {
+    background-image: url("https://condescending-curie-29a045.netlify.app/bmps/filmStrip.png");
     width: 100px;
-    height: 3200px; */
+    height: 3200px;
+    position: fixed;
+    top: 0;
+    left: 50px;
+    z-index: -1;
+    animation: movie 1s linear infinite;
+    opacity: 0.15;
 }
 
 .App-logo {
     height: 40vmin;
     pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
 }
 
 .App-header {
@@ -34,11 +34,11 @@
     color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes movie {
     from {
-        transform: rotate(0deg);
+        top: 0;
     }
     to {
-        transform: rotate(360deg);
+        top: -300px
     }
 }
