--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,42 @@
+nav {
+    background-color: white;
+    border-bottom: 1px solid black;
+    display: flex;
+}
+
+.navbar-collapse.collapse {
+    flex-direction: column;
+}
+
+.navbar-collapse span {
+    text-align: right;
+    margin: 10px 0;
+}
+
+.navbar-collapse.collapse span a {
+    color: black
+}
+
+.navbar-brand {
+    font-weight: bold;
+}
+
 @media (min-width: 992px) {
-    .navbar-expand-lg .navbar-collapse {
+    /* .navbar-expand-lg .navbar-collapse {
+        justify-content: flex-end;
+    } */
+    .navbar-expand-lg {
+        justify-content: space-between;
+    }
+    .navbar-collapse.collapse span {
+        margin-left: 200px;
+    }
+    .navbar-collapse.collapse {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .navbar-collapse.collapse .navbar-nav {
+        width: 100%;
         justify-content: flex-end;
     }
 }
