--- a/src/components/movies/MovieComponent.css
+++ b/src/components/movies/MovieComponent.css
@@ -1,30 +1,32 @@
 .movie-module {
-    border-radius: 20px;
-    border: 1px solid lightgrey;
     padding: 20px;
-    margin: 20px;
-    background-color: transparent;
-    transition: background-color 0.25s;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
-    ;
-}
-
-.movie-module:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-.movie-module * {
-    margin: 0;
-    padding: 0;
     text-align: left;
 }
 
-.movie-module h2 {
+.movie-module h3 {
     text-align: left;
+    margin-top: 10px;
+    font-size: 15px;
+    display: inline-block;
+    border-bottom: 1px solid black;
+    font-weight: bold;
 }
 
-.movie-module div {
-    display: block;
+.movie-module h3 a:hover {
+    text-decoration: none;
+}
+
+.movie-module h3:hover {
+    border-color: white;
+}
+
+.movie-module h3 a {
+    color: black;
+}
+
+.movie-module p {
+    font-size: 12px;
+    margin-bottom: 0;
 }
 
 .movie-module img {
@@ -33,13 +35,19 @@
     width: 100%;
 }
 
-@media (min-width: 768px) {
-    .movie-module div {
-        display: flex;
+.movie-module .movie-link {
+    float: right;
+    color: black;
+    font-size: 12px;
+    font-style: italic;
+}
+
+@media (min-width: 900px) {
+    .movie-module {
+        width: 50%;
+        min-width: calc(100vw * 0.5);
     }
-    .movie-module div img {
-        margin-right: 10px;
-        width: 281px;
-        height: 144px
+    .movie-module h3 {
+        margin-top: 20px;
     }
 }
