--- a/src/pages/MoviePage.css
+++ b/src/pages/MoviePage.css
@@ -44,6 +44,12 @@
     cursor: pointer;
 }
 
+.movie-details-inner {
+    margin: 20px;
+    text-align: left;
+    display: inline-block;
+}
+
 @media (min-width:600px) {
     /* .movie-page-shell {
         margin: 125px auto 0;
