--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 nav {
     background-color: white;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
     display: flex;
 }
 
