--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,6 +2,8 @@
     padding-top: 100px;
     display: flex;
     flex-direction: column;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(139deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 75%);
 }
 
 @media (min-width: 900px) {
