--- a/src/pages/MoviePage.css
+++ b/src/pages/MoviePage.css
@@ -2,17 +2,28 @@
     position: relative;
 }
 
+.movie-page-background {
+    background: rgb(0, 0, 0);
+    background: linear-gradient(163deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 1) 100%);
+    height: 100vh;
+}
+
+.movie-page-background * {
+    background: transparent;
+}
+
 .movie-page-shell {
-    margin: 125px auto 0;
+    margin: 60px auto 0;
     width: 100vw;
     max-width: 768px;
-    padding: 0 15px;
+    padding: 50px 15px;
 }
 
 .movie-page-shell h2 {
     text-align: left;
     border-bottom: 1px solid grey;
     margin-bottom: 5px;
+    font-size: 1.5rem;
 }
 
 .iFrameClass.not-loaded {
