--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,42 +1,154 @@
-nav {
-    background-color: white;
-    /* border-bottom: 1px solid black; */
+.nav-wrapper {
+    background: white;
+    color: black;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    overflow: hidden;
+    padding-left: 1rem;
+    padding-right: 1rem
 }
 
-.navbar-collapse.collapse {
+.nav-hamburger {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: 9px;
+    right: .8rem;
+    cursor: pointer;
+    opacity: 0;
+    /* hide this */
+    z-index: 20;
+    /* and place it over the hamburger */
+    -webkit-touch-callout: none;
+}
+
+.nav-hamburger:hover~.nav-hamburger-spans span {
+    opacity: 1;
+}
+
+.nav-hamburger-spans {
+    display: block;
+    /* width: 40px;
+    height: 32px; */
+    position: absolute;
+    top: 10px;
+    right: 1rem;
+    z-index: 11;
+}
+
+.nav-hamburger-spans span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: black !important;
+    border-radius: 3px;
+    z-index: 1;
+    opacity: 0.5;
+    transition: opacity 0.25s;
+}
+
+.nav-hamburger:checked~.nav-links {
+    margin-top: 0;
+}
+
+.nav-hamburger:checked~.nav-hamburger-spans span {
+    transition: transform 0.75s ease;
+}
+
+.nav-hamburger:checked~.nav-hamburger-spans span:nth-of-type(1) {
+    transform: translate(0, 8px);
+}
+
+.nav-hamburger:checked~.nav-hamburger-spans span:nth-of-type(3) {
+    transform: translate(0, -8px);
+}
+
+.nav-links {
+    align-items: left;
+    margin-top: -100%;
+    display: flex;
     flex-direction: column;
+    transition: all 1s ease-in-out;
 }
 
-.navbar-collapse span {
-    text-align: right;
-    margin: 10px 0;
+.nav-links span {
+    text-align: left;
+    display: inline-block;
+    margin: 5px 0;
 }
 
-.navbar-collapse.collapse span a {
+.nav-links span a {
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    text-align: left;
+    font-size: 1rem;
+    color: black;
+    font-weight:400;
+}
+
+.nav-links span a:hover {
+    text-decoration: none;
+}
+
+.nav-brand {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    display: block;
+    font-size: 1.5rem;
+    white-space: nowrap;
+    width: 100%;
+    background-color: white;
+    position: relative;
+    z-index: 10;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    text-align: left;
+}
+
+.nav-brand a {
     color: black
 }
 
-.navbar-brand {
-    font-weight: bold;
+.nav-brand a:hover {
+    text-decoration: none;
+    color: black
 }
 
-@media (min-width: 992px) {
-    /* .navbar-expand-lg .navbar-collapse {
+@media (min-width: 1024px) {
+    .nav-wrapper {
+        flex-wrap: nowrap;
+    }
+    .nav-hamburger {
+        display: none;
+    }
+    .nav-hamburger-spans {
+        display: none;
+    }
+    .nav-links {
+        flex-basis: auto;
+        flex-grow: 1;
+        flex-direction: row;
         justify-content: flex-end;
-    } */
-    .navbar-expand-lg {
-        justify-content: space-between;
-    }
-    .navbar-collapse.collapse span {
-        margin-left: 200px;
-    }
-    .navbar-collapse.collapse {
-        display: flex;
-        justify-content: flex-end;
-    }
-    .navbar-collapse.collapse .navbar-nav {
         width: 100%;
-        justify-content: flex-end;
+        margin-top: 0;
+        transition: none;
+        padding: 0;
+    }
+    .nav-links span {
+        cursor: pointer;
+        display: inline-block;
+        width: auto;
+        text-align: right;
+        margin: 0 0 0 20px;
+        font-weight: bold;
     }
 }
