--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     background: rgb(0, 0, 0);
     background: linear-gradient(139deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 75%);
+    height: 100%;
 }
 
 @media (min-width: 900px) {
