--- a/src/components/HomeHeader.css
+++ b/src/components/HomeHeader.css
@@ -9,3 +9,12 @@
     text-align: left;
     margin-left: 1rem;
 }
+
+.home-header a {
+    text-decoration: none;
+    color: black;
+}
+
+.home-header a:hover {
+    text-decoration: underline;
+}
