--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,18 +1,21 @@
 footer {
+	position: fixed;
+	width: 100vw;
+	bottom: 0;
+	left: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background: rgb(0, 0, 0);
-    background: linear-gradient(163deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 1) 100%);
-    padding-bottom: 20px;
+    background: linear-gradient(163deg, rgba(255,255,255, 1) 0, rgba(194,202, 201, 1) 100%);
+	height:45px;
 }
 
 footer img {
-    margin: 0 10px 10px;
     width: 30px;
     height: 30px;
+	margin: 0 10px;
 }
-
-footer img {
-    color: white
+footer a:nth-child(1) {
+   margin-left: 50px
 }
