--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,13 +9,17 @@ footer {
     background: rgb(0, 0, 0);
     background: linear-gradient(163deg, rgba(255,255,255, 1) 0, rgba(194,202, 201, 1) 100%);
 	height:45px;
+	padding-left: 1rem;
 }
 
 footer img {
     width: 30px;
     height: 30px;
-	margin: 0 10px;
+	margin-right: 1rem;
 }
-footer a:nth-child(1) {
-   margin-left: 50px
+
+@media (min-width: 1024px) {
+	footer {
+		padding-left: 6rem;
+	}
 }
