--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -6,7 +6,6 @@
     flex-wrap: wrap;
     position: relative;
     overflow: hidden;
-  
 }
 #nav-top-band {
 	background-color: #ebebee;
@@ -18,6 +17,7 @@
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
+	padding: 0 1rem;
 }
 
 .nav-hamburger {
@@ -133,6 +133,9 @@
 }
 
 @media (min-width: 1024px) {
+	#nav-content {
+		padding: 0;
+	}
     .nav-wrapper {
         flex-wrap: nowrap;
 		padding-left: 6rem;
